@@ -449,6 +449,9 @@ Release 0.16.2 - Unreleased
 
     HADOOP-3107. Fix NPE when fsck invokes getListings. (dhruba)
 
+    HADOOP-3103. [HOD] Hadoop.tmp.dir should not be set to cluster 
+    directory. (Vinod Kumar Vavilapalli via ddas).
+
 Release 0.16.1 - 2008-03-13
 
   INCOMPATIBLE CHANGES
